# hiv-1-spdl

./: README
data/IN/: README  pdb.fasta
data/IN/refs/: 7l2y.cif  README  alignment.fasta  hxb2.fasta  overrides.fasta  pdb.fasta  proteins.txt  query.fasta
data/PR/: pdb.fasta
data/PR/refs/: 6ogp.cif  alignment.fasta  hxb2.fasta  overrides.fasta  pdb.fasta  proteins.txt  query.fasta
data/RT/: README  pdb.fasta
data/RT/refs/: alignment.fasta  hxb2.fasta  pdb.fasta  proteins.txt  query.fasta
results/: IN-global-rmsd-anova.csv  IN-global-rmsd-means.csv  IN-global-rmsd-posthoc.csv  IN-global-tm-anova.csv  IN-global-tm-means.csv  IN-global-tm-posthoc.csv  IN-pos-plddt-anova.csv  IN-pos-plddt-means.csv  IN-pos-plddt-posthoc.csv  IN-pos-rmsd-anova.csv  IN-pos-rmsd-means.csv  IN-pos-rmsd-posthoc.csv  PR-global-rmsd-anova.csv  PR-global-rmsd-means.csv  PR-global-rmsd-posthoc.csv  PR-global-tm-anova.csv  PR-global-tm-means.csv  PR-global-tm-posthoc.csv  PR-pos-plddt-anova.csv  PR-pos-plddt-means.csv  PR-pos-plddt-posthoc.csv  PR-pos-rmsd-anova.csv  PR-pos-rmsd-means.csv  PR-pos-rmsd-posthoc.csv  RT-global-rmsd-anova.csv  RT-global-rmsd-means.csv  RT-global-rmsd-posthoc.csv  RT-global-tm-anova.csv  RT-global-tm-means.csv  RT-global-tm-posthoc.csv  RT-pos-plddt-anova.csv  RT-pos-plddt-means.csv  RT-pos-plddt-posthoc.csv  RT-pos-rmsd-anova.csv  RT-pos-rmsd-means.csv  RT-pos-rmsd-posthoc.csv  in-global-rmsd.csv  in-global-tm.csv  in-pos-plddt.csv  in-pos-rmsd.csv  (+8 more)
scripts/: TODO  all_plots.sh  all_stats.sh  analysis.sh  cif_to_pdb.py  cli-global-rmsd.sh  cli-global-tm.sh  cli-global.py  cli-pos-plddt.sh  cli-pos-rmsd.sh  cli-pos.py  cli.py  config.py  core.py  fasta.sh  fix_pr_pdb.py  format_fasta.py  io.py  myio.py  pdb_fasta.py  plddt.py  plot-pos-plddt.sh  plot-pos-rmsd.sh  plot.py  plot.sh  pyproject.toml  query_fasta.py  questions.txt  rm_align_pos.py  rmsd.py  stats.py  stats_diagnostics.py  tm.py  trim_alignment_left.py  utils.py
tests/: conftest.py  test_core.py  test_fasta.py  test_integration.py  test_myio.py  test_rmsd.py  test_tm.py  test_tm_integration.py
